package for release

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sign files with a code signing certificate.",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && ncc build lib/index.js -m"
+    "build": "tsc",
+    "release": "ncc build index.ts && git add -f dist/"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.11.1",
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "^0.34.0",
     "typescript": "^3.6.4"
   }
 }
